<resources>
    <string name="app_name">Find me</string>
    <string name="new_game">New Game</string>
    <string name="settings">Settings</string>
    <string name="records">Records</string>
    <string name="quit_the_game">Quit the game</string>
    <string name="result_uppercase">RESULTS</string>
    <string name="ok_uppercase">OK</string>
    <string name="back_to_menu">Back to menu</string>
    <string name="top_records">Top records:</string>
    <string name="the_background">The background</string>
    <string name="white">White</string>
    <string name="green">Green</string>
    <string name="cyan">Cyan</string>
    <string name="yellow">Yellow</string>
    <string name="gray">Gray</string>
    <string name="random">Random</string>
    <string name="score">Score:</string>
    <string name="timer">Timer: </string>
    <string name="admob_app_id" translatable="false">ca-app-pub-6754601615997193~5470825040</string>
    <string name="admob_banner_id" translatable="false">ca-app-pub-6754601615997193/8059090247</string>
</resources>