<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView_background"
        style="@style/MyStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="46dp"
        android:text="@string/the_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_white"
        style="@style/MyStyle"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:text="@string/white"
        app:backgroundTint="@color/white"
        app:cornerRadius="90dp"
        app:layout_constraintEnd_toStartOf="@+id/button_green"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_background"
        app:strokeColor="@color/Red"
        app:strokeWidth="1dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_green"
        style="@style/MyStyle"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:text="@string/green"
        app:backgroundTint="@color/Green"
        app:cornerRadius="90dp"
        app:layout_constraintEnd_toStartOf="@+id/button_cyan"
        app:layout_constraintStart_toEndOf="@+id/button_white"
        app:layout_constraintTop_toTopOf="@+id/button_white"
        app:strokeColor="@color/Red"
        app:strokeWidth="1dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_cyan"
        style="@style/MyStyle"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:text="@string/cyan"
        app:backgroundTint="@color/Cyan"
        app:cornerRadius="90dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_green"
        app:layout_constraintTop_toTopOf="@+id/button_white"
        app:strokeColor="@color/Red"
        app:strokeWidth="1dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_yellow"
        style="@style/MyStyle"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:text="@string/yellow"
        app:backgroundTint="@color/Yellow"
        app:cornerRadius="90dp"
        app:layout_constraintEnd_toStartOf="@+id/button_gray"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_white"
        app:strokeColor="@color/Red"
        app:strokeWidth="1dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_gray"
        style="@style/MyStyle"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_marginTop="2dp"
        android:text="@string/gray"
        app:backgroundTint="@color/Gray"
        app:cornerRadius="90dp"
        app:layout_constraintEnd_toStartOf="@+id/button_random"
        app:layout_constraintStart_toEndOf="@+id/button_yellow"
        app:layout_constraintTop_toTopOf="@+id/button_yellow"
        app:strokeColor="@color/Red"
        app:strokeWidth="1dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_random"
        style="@style/MyStyle"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_marginTop="2dp"
        android:text="@string/random"
        android:textSize="24sp"
        app:backgroundTint="@color/transparent"
        app:cornerRadius="90dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_gray"
        app:layout_constraintTop_toTopOf="@+id/button_yellow"
        app:strokeColor="@color/Red"
        app:strokeWidth="1dp" />

    <Button
        android:id="@+id/btn_menu"
        style="@style/MyStyleForButton"
        android:layout_marginHorizontal="40dp"
        android:layout_marginVertical="40dp"
        android:text="@string/back_to_menu"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1" />

</androidx.constraintlayout.widget.ConstraintLayout>